--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BNR Partners | Security Compliance & Technical Advisory Services</title>
-  <meta name="description" content="BNR Partners provides expert security compliance and technical advisory services for growing businesses worldwide. Specializing in SOC 2, ISO 27001, Essential 8, APRA CPS 234, and DevSecOps implementation.">
+  <meta name="description" content="BNR Partners provides expert security compliance and technical advisory services for growing businesses worldwide. Strategic guidance, implementation support, and DevSecOps expertise.">
   <meta name="keywords" content="security compliance, technical advisory, CISO services, CTO services, DevSecOps, security architecture, cybersecurity consulting, risk management, cloud security">
   <meta name="author" content="BNR Partners">
   <link rel="canonical" href="https://bnr.partners/">
@@ -13,14 +13,14 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://bnr.partners/">
   <meta property="og:title" content="BNR Partners | Security Compliance & Technical Advisory Services">
-  <meta property="og:description" content="Expert security compliance and technical advisory services for growing businesses worldwide. Specializing in SOC 2, ISO 27001, Essential 8, APRA CPS 234, and DevSecOps implementation.">
+  <meta property="og:description" content="Expert security compliance and technical advisory services for growing businesses worldwide. Strategic guidance, implementation support, and DevSecOps expertise.">
   <meta property="og:site_name" content="BNR Partners">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bnr.partners/">
   <meta name="twitter:title" content="BNR Partners | Security Compliance & Technical Advisory Services">
-  <meta name="twitter:description" content="Expert security compliance and technical advisory services for growing businesses worldwide. Specializing in SOC 2, ISO 27001, Essential 8, APRA CPS 234, and DevSecOps implementation.">
+  <meta name="twitter:description" content="Expert security compliance and technical advisory services for growing businesses worldwide. Strategic guidance, implementation support, and DevSecOps expertise.">
   
   <!-- Additional SEO -->
   <meta name="robots" content="index, follow">
