--- a/index.html
+++ b/index.html
@@ -538,26 +538,37 @@
         </div>
         <h1>Partners</h1>
       </div>
-      <p>Expert security compliance and technical advisory services that help growing businesses build secure, compliant technology platforms—without the overhead of full-time executive hires.</p>
+      <p>Expert security compliance and technical advisory services that help growing businesses build secure, compliant technology platforms. Get access to two senior experts—CISO and CTO-level experience—for a fraction of the cost of one full-time hire.</p>
     </header>
 
     <section class="section">
       <h2>The Challenge</h2>
-      <p>Growing businesses face increasing security and compliance demands—from SOC 2 and ISO 27001 to Essential 8 and APRA CPS 234. Access to high-quality expertise shouldn't require significant overhead or long-term commitments.</p>
+      <p>Growing businesses face increasing security and compliance demands across multiple frameworks and regulations. Access to high-quality expertise shouldn't require significant overhead or long-term commitments.</p>
+    </section>
+
+    <section class="section">
+      <h2>Why BNR Partners</h2>
+      <p>Unlike traditional consulting or hiring a single executive, BNR Partners gives you access to two complementary experts working together on your challenges:</p>
+      <ul>
+        <li><strong>Dual expertise</strong>—combined CISO and CTO perspectives ensure comprehensive security and technical solutions</li>
+        <li><strong>Better availability</strong>—two partners means consistent coverage and faster response times</li>
+        <li><strong>Built-in redundancy</strong>—no single point of failure; always someone available when you need support</li>
+        <li><strong>Cost-effective</strong>—get twice the expertise at a fraction of the cost of one full-time executive</li>
+        <li><strong>Complementary skills</strong>—security compliance expertise paired with technical implementation knowledge</li>
+      </ul>
     </section>
 
     <section class="section">
       <h2>Our Solution</h2>
       <p>We deliver flexible, executive-level security and technical expertise that scales with your business:</p>
       <ul>
-        <li><strong>Compliance frameworks</strong>—strategic guidance and implementation for SOC 2, ISO 27001, Essential 8, and APRA CPS 234</li>
+        <li><strong>Compliance frameworks</strong>—strategic guidance and implementation for international security and privacy standards</li>
         <li><strong>Security architecture</strong>—scalable designs that support business growth and protect critical assets</li>
         <li><strong>DevSecOps implementation</strong>—accelerate secure deployments without slowing innovation</li>
         <li><strong>Compliance automation</strong>—reduce manual overhead while increasing reliability and auditability</li>
         <li><strong>Risk management</strong>—identify, prioritise, and mitigate security risks aligned with business objectives</li>
         <li><strong>Technical advisory</strong>—hands-on implementation and strategic guidance tailored to your needs</li>
         <li><strong>Team development</strong>—mentorship and training to build lasting security capabilities</li>
-        <li><strong>Flexible engagement</strong>—access CISO and CTO-level expertise without full-time commitments</li>
       </ul>
     </section>
 
@@ -588,7 +599,7 @@
 
     <section class="section">
       <h2>Our Expertise</h2>
-      <p>Our founding partners bring decades of combined experience as CISO and CTO, delivering complementary executive-level expertise across:</p>
+      <p>Our two founding partners bring decades of combined experience as CISO and CTO, working together to deliver comprehensive solutions across:</p>
       <ul>
         <li>Security compliance frameworks—implementation, audit preparation, and ongoing management</li>
         <li>Enterprise architecture—cloud security, infrastructure design, and system integration</li>
@@ -597,6 +608,7 @@
         <li>Data protection—privacy programme design and regulatory compliance</li>
         <li>DevSecOps—secure CI/CD pipelines and automated security controls</li>
       </ul>
+      <p>When you work with BNR Partners, you benefit from both security and technical perspectives on every challenge—providing more robust solutions and better outcomes than a single consultant could deliver.</p>
     </section>
 
     <section class="section">
