--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         <span class="logo-text">BnR</span>
         <h1>Partners</h1>
       </div>
-      <p>Expert security compliance and technical advisory services helping growing businesses build secure, compliant technology platforms.</p>
+      <p>Expert Security, Compliant Technology.</p>
     </header>
 
     <section class="section">
