--- a/index.html
+++ b/index.html
@@ -173,6 +173,20 @@
       text-align: left;
       font-style: normal;
     }
+    
+    .nav-link {
+        font-family: 'Merriweather', serif;
+        font-size: 1.2rem;
+        color: var(--accent-primary);
+        text-decoration: none;
+        font-weight: 700;
+        border-bottom: 2px solid transparent;
+        white-space: nowrap;
+    }
+    
+    .nav-link:hover {
+        border-bottom-color: var(--accent-highlight);
+    }
 
     /* Sections */
     .section {
@@ -432,6 +446,21 @@
               Ensure the organisation doesn’t lose momentum or risk capability gaps.
             </td>
           </tr>
+          <tr>
+            <td>
+              <h3>Mind the Gap</h3>
+              <p style="margin-bottom:0; font-size: 0.9rem; font-style: italic;">Rapid Diagnostic & Validation</p>
+            </td>
+            <td>
+              When you need quick, surgical expertise to validate a critical security or architecture decision, or unblock a stalled high-priority initiative.
+            </td>
+            <td>
+              We deliver a rapid diagnostic, validation, or peer-review workshop within short timelines.
+            </td>
+            <td>
+              Achieve immediate risk mitigation and gain the confidence required to move forward on critical technology and security decisions.
+            </td>
+          </tr>
         </tbody>
       </table>
 
@@ -458,6 +487,13 @@
             <li>Vendor and delivery management</li>
             <li>"Fill the gap" service</li>
           </ul>
+        </div>
+
+        <div class="mobile-service-card">
+          <h3>Mind the Gap</h3>
+          <p class="service-subtitle">Rapid Diagnostic & Validation</p>
+          <p>When you need quick, surgical expertise to validate a critical security or architecture decision, or unblock a stalled high-priority initiative.</p>
+          <p>Senior specialists deliver a rapid diagnostic, validation, or peer-review workshop within days, not weeks.</p>
         </div>
       </div>
     </section>
@@ -490,6 +526,9 @@
         <a href="https://bernhardt.ltd" target="_blank" rel="noopener">Bernhardt Ltd</a>
         &nbsp;&bull;&nbsp;
         <a href="https://whc.services" target="_blank" rel="noopener">WHC Services</a>
+      </p>
+      <p style="margin-top: 1.5rem; font-size: 0.9rem;">
+        <a href="stack/index.html">Our Stack</a>
       </p>
     </div>
   </main>
