--- a/index.html
+++ b/index.html
@@ -285,6 +285,25 @@
       border-bottom-color: var(--accent-highlight);
     }
 
+    .cta-button {
+      display: inline-block;
+      background-color: var(--accent-highlight);
+      color: white;
+      padding: 0.75rem 1.5rem;
+      border-radius: 6px;
+      font-weight: 700;
+      margin-top: 1rem;
+      border-bottom: none;
+      transition: background-color 0.2s, transform 0.2s;
+    }
+
+    .cta-button:hover {
+      background-color: #b45309; /* Darker amber */
+      border-bottom-color: transparent;
+      transform: translateY(-2px);
+      color: white;
+    }
+
     /* Partners */
     .partners {
       margin-top: 4rem;
@@ -516,6 +535,9 @@
           <p>Ready to strengthen your security posture and compliance framework? Let's discuss how we can support your organisation's goals.</p>
           <p><strong>Email us:</strong> <a href="mailto:hello@bnr.partners">hello@bnr.partners</a></p>
           <p>We typically respond within one business day to schedule an initial consultation.</p>
+          <p>
+            <a href="https://calendar.app.google/sLuKPTuHShXvqGiC8" target="_blank" rel="noopener" class="cta-button">Book an Appointment</a>
+          </p>
         </div>
       </div>
     </section>
