--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
       <div class="logo-container">
         <img src="img/bnr-1.png" alt="BNR Partners" class="logo-img">
       </div>
-      <p>Expert Security, Compliant Technology.</p>
+      <p>Compliant Technology | Expert Security .</p>
     </header>
 
     <section class="section">
