--- a/stack/index.html
+++ b/stack/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BNR Partners | Open Source Stack</title>
+  <title>BNR Partners | Stack</title>
   <meta name="description" content="The open source security and infrastructure tools that power BNR Partners' services.">
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
@@ -319,7 +319,7 @@
             <img src="../img/bnr-1.png" alt="BNR Partners" class="logo-img">
         </a>
       </div>
-      <p>Our Open Source Stack.</p>
+      <p>Compliant Technology | Expert Security .</p>
     </header>
 
     <section class="section">
