--- a/index.html
+++ b/index.html
@@ -432,11 +432,11 @@
 </head>
 <body>
   <nav class="top-menu">
-    <a href="index.html">
+    <a href="/">
         <img src="img/bnr-1.png" alt="BNR Partners" class="menu-logo">
     </a>
     <div class="nav-items">
-        <a href="stack/index.html" class="nav-link">Our Stack</a>
+        <a href="stack/" class="nav-link">Our Stack</a>
         <a href="https://calendar.app.google/sLuKPTuHShXvqGiC8" target="_blank" rel="noopener" class="cta-button">Book Now</a>
     </div>
   </nav>
