--- a/stack/index.html
+++ b/stack/index.html
@@ -315,7 +315,7 @@
 </head>
 <body>
   <nav class="top-menu">
-    <a href="../index.html">
+    <a href="../">
         <img src="../img/bnr-1.png" alt="BNR Partners" class="menu-logo">
     </a>
     <div class="nav-items">
