--- a/index.html
+++ b/index.html
@@ -465,17 +465,17 @@
           <tr>
             <td>
               <h3>Close the Gap</h3>
-              <p style="margin-bottom:0; font-size: 0.9rem; font-style: italic;">Strategic Leadership & Capability Building</p>
+              <p style="margin-bottom:0; font-size: 0.9rem; font-style: italic;">Team Capability Building</p>
             </td>
             <td>
-              For companies whose teams are capable but need direction.
+              For companies whose teams are capable but need clear direction.
             </td>
             <td>
               <ul>
-                <li>Technology strategy development</li>
-                <li>Team leadership and upskilling</li>
-                <li>Governance and delivery frameworks</li>
-                <li>Roadmap creation and optimisation</li>
+                <li>Clear roadmap aligning technology with business goals.</li>
+                <li>Targeted training to elevate team expertise.</li>
+                <li>Robust frameworks for streamlined processes.</li>
+                <li>Evolving capabilities for long-term stability.</li>
               </ul>
             </td>
             <td>
@@ -492,26 +492,31 @@
             </td>
             <td>
               <ul>
-                <li>Complementary executive support</li>
-                <li>Targeted expertise in gap areas</li>
-                <li>Vendor and delivery management</li>
-                <li>"Fill the gap" service</li>
+                <li>Augment leadership, freeing focus on strategy.</li>
+                <li>Specialized expertise in key areas.</li>
+                <li>Ensure compliance with industry standards.</li>
+                <li>Proactive technology risk mitigation for stronger security.</li>
               </ul>
             </td>
             <td>
-              Ensure the organisation doesn’t lose momentum or risk capability gaps.
+              Ensure steady progress and prevent capability blind spots. 
             </td>
           </tr>
           <tr>
             <td>
               <h3>Mind the Gap</h3>
-              <p style="margin-bottom:0; font-size: 0.9rem; font-style: italic;">Rapid Diagnostic & Validation</p>
+              <p style="margin-bottom:0; font-size: 0.9rem; font-style: italic;">Rapid Validation</p>
             </td>
             <td>
               When you need quick, surgical expertise to validate a critical security or architecture decision, or unblock a stalled high-priority initiative.
             </td>
             <td>
-              We deliver a rapid diagnostic, validation, or peer-review workshop within short timelines.
+              <ul>
+                <li>Swiftly diagnose critical technology concerns.</li>
+                <li>Independent validation of key decisions.</li>
+                <li>Focused workshops for refined solutions.</li>
+                <li>Accelerate progress, removing roadblocks quickly.</li>
+              </ul>
             </td>
             <td>
               Achieve immediate risk mitigation and gain the confidence required to move forward on critical technology and security decisions.
@@ -523,13 +528,13 @@
       <div class="mobile-services">
         <div class="mobile-service-card">
           <h3>Close the Gap</h3>
-          <p class="service-subtitle">Strategic Leadership & Capability Building</p>
-          <p>For companies whose teams are capable but need direction.</p>
+          <p class="service-subtitle">Team Capability Building</p>
+          <p>For companies whose teams are capable but need clear direction.</p>
           <ul>
-            <li>Technology strategy development</li>
-            <li>Team leadership and upskilling</li>
-            <li>Governance and delivery frameworks</li>
-            <li>Roadmap creation and optimisation</li>
+            <li>Clear roadmap aligning technology with business goals.</li>
+            <li>Targeted training to elevate team expertise.</li>
+            <li>Robust frameworks for streamlined processes.</li>
+            <li>Evolving capabilities for long-term stability.</li>
           </ul>
         </div>
         
@@ -538,18 +543,23 @@
           <p class="service-subtitle">Complementing Your Existing Tech Leader</p>
           <p>Organisations with a strong leader who needs support in specific areas.</p>
           <ul>
-            <li>Complementary executive support</li>
-            <li>Targeted expertise in gap areas</li>
-            <li>Vendor and delivery management</li>
-            <li>"Fill the gap" service</li>
+            <li>Augment leadership, freeing focus on strategy.</li>
+            <li>Specialized expertise in key areas.</li>
+            <li>Manage vendors, ensuring project success.</li>
+            <li>Proactive risk management for stronger security.</li>
           </ul>
         </div>
 
         <div class="mobile-service-card">
           <h3>Mind the Gap</h3>
-          <p class="service-subtitle">Rapid Diagnostic & Validation</p>
+          <p class="service-subtitle">Rapid Validation</p>
           <p>When you need quick, surgical expertise to validate a critical security or architecture decision, or unblock a stalled high-priority initiative.</p>
-          <p>Senior specialists deliver a rapid diagnostic, validation, or peer-review workshop within days, not weeks.</p>
+          <ul>
+            <li>Swiftly diagnose critical technology concerns.</li>
+            <li>Independent validation of key decisions.</li>
+            <li>Focused workshops for refined solutions.</li>
+            <li>Accelerate progress, removing roadblocks quickly.</li>
+          </ul>
         </div>
       </div>
     </section>
