--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             <li><strong>Part-time leadership</strong></li>
             <li><strong>Project-based support</strong></li>
             <li><strong>Transitional or interim roles</strong></li>
-            <li><strong>Customized retainers</strong></li>
+            <li><strong>Tailored retainers</strong></li>
           </ul>
         </div>
 
