--- a/stack/index.html
+++ b/stack/index.html
@@ -319,6 +319,7 @@
         <img src="../img/bnr-1.png" alt="BNR Partners" class="menu-logo">
     </a>
     <div class="nav-items">
+        <a href="../portal/" class="nav-link">Login</a>
         <a href="https://calendar.app.google/sLuKPTuHShXvqGiC8" target="_blank" rel="noopener" class="cta-button">Book Now</a>
     </div>
   </nav>
