--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
     </a>
     <div class="nav-items">
         <a href="stack/" class="nav-link">Our Stack</a>
+        <a href="portal/" class="nav-link">Login</a>
         <a href="https://calendar.app.google/sLuKPTuHShXvqGiC8" target="_blank" rel="noopener" class="cta-button">Book Now</a>
     </div>
   </nav>
