--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta property="og:url" content="https://bnr.partners/">
   <meta property="og:title" content="BNR Partners | Bridging the Gap in Technical Leadership">
   <meta property="og:description" content="BNR Partners helps companies close the gap in strategic leadership and fill capability gaps. Expert security compliance and technical advisory services.">
+  <meta property="og:image" content="https://bnr.partners/img/bnr-2.png">
   <meta property="og:site_name" content="BNR Partners">
   
   <!-- Twitter -->
@@ -21,10 +22,25 @@
   <meta name="twitter:url" content="https://bnr.partners/">
   <meta name="twitter:title" content="BNR Partners | Bridging the Gap in Technical Leadership">
   <meta name="twitter:description" content="BNR Partners helps companies close the gap in strategic leadership and fill capability gaps. Expert security compliance and technical advisory services.">
+  <meta name="twitter:image" content="https://bnr.partners/img/bnr-2.png">
   
   <!-- Additional SEO -->
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "BNR Partners",
+    "url": "https://bnr.partners/",
+    "logo": "https://bnr.partners/img/bnr-2.png",
+    "description": "BNR Partners helps companies close the gap in strategic leadership and fill capability gaps. Expert security compliance and technical advisory services.",
+    "sameAs": [
+      "https://github.com/bnr-partners"
+    ]
+  }
+  </script>
   
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
@@ -65,19 +81,6 @@
       font-family: 'Merriweather', serif;
       color: var(--text-dark);
       line-height: 1.2;
-    }
-
-    h1 {
-      font-family: 'Open Sans', sans-serif;
-      font-size: 1.15rem;
-      font-weight: 700;
-      letter-spacing: 0.82em;
-      text-transform: uppercase;
-      color: var(--accent-highlight);
-      margin-top: 0.5rem;
-      margin-left: 0.25rem;
-      margin-right: -0.82em; /* Compensate for last letter spacing */
-      display: block;
     }
 
     h2 {
@@ -524,7 +527,7 @@
 
   <main>
     <header>
-      <p class="slogan">Compliant Technology | Expert Security .</p>
+      <h1 class="slogan">Compliant Technology | Expert Security .</h1>
       <p class="hero-quote">"Bridging the Gap in Technical Leadership."</p>
     </header>
 
