--- a/portal/index.html
+++ b/portal/index.html
@@ -5,6 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
   <title>BNR Partners | Client Portal</title>
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://bnr.partners/portal/">
+  <meta property="og:title" content="BNR Partners | Client Portal">
+  <meta property="og:description" content="Secure client portal for BNR Partners.">
+  <meta property="og:image" content="https://bnr.partners/img/bnr-2.png">
+  <meta property="og:site_name" content="BNR Partners">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://bnr.partners/portal/">
+  <meta name="twitter:title" content="BNR Partners | Client Portal">
+  <meta name="twitter:description" content="Secure client portal for BNR Partners.">
+  <meta name="twitter:image" content="https://bnr.partners/img/bnr-2.png">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "BNR Partners Client Portal",
+    "url": "https://bnr.partners/portal/",
+    "description": "Secure client portal for BNR Partners.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "BNR Partners",
+      "logo": "https://bnr.partners/img/bnr-2.png"
+    }
+  }
+  </script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
