--- a/stack/index.html
+++ b/stack/index.html
@@ -5,8 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BNR Partners | Stack</title>
   <meta name="description" content="The open source security and infrastructure tools that power BNR Partners' services.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://bnr.partners/stack/">
+  <meta property="og:title" content="BNR Partners | Stack">
+  <meta property="og:description" content="The open source security and infrastructure tools that power BNR Partners' services.">
+  <meta property="og:image" content="https://bnr.partners/img/bnr-2.png">
+  <meta property="og:site_name" content="BNR Partners">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://bnr.partners/stack/">
+  <meta name="twitter:title" content="BNR Partners | Stack">
+  <meta name="twitter:description" content="The open source security and infrastructure tools that power BNR Partners' services.">
+  <meta name="twitter:image" content="https://bnr.partners/img/bnr-2.png">
+
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "BNR Partners Stack",
+    "url": "https://bnr.partners/stack/",
+    "description": "The open source security and infrastructure tools that power BNR Partners' services.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "BNR Partners",
+      "logo": "https://bnr.partners/img/bnr-2.png"
+    }
+  }
+  </script>
   
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
@@ -47,19 +78,6 @@
       font-family: 'Merriweather', serif;
       color: var(--text-dark);
       line-height: 1.2;
-    }
-
-    h1 {
-      font-family: 'Open Sans', sans-serif;
-      font-size: 1.15rem;
-      font-weight: 700;
-      letter-spacing: 0.82em;
-      text-transform: uppercase;
-      color: var(--accent-highlight);
-      margin-top: 0.5rem;
-      margin-left: 0.25rem;
-      margin-right: -0.82em; /* Compensate for last letter spacing */
-      display: block;
     }
 
     h2 {
@@ -406,7 +424,7 @@
 
   <main>
     <header>
-      <p class="slogan">Compliant Technology | Expert Security .</p>
+      <h1 class="slogan">Compliant Technology | Expert Security .</h1>
       <p class="hero-quote">"We rely on and contribute to a robust ecosystem of open source tools."</p>
     </header>
 
