--- a/index.html
+++ b/index.html
@@ -430,6 +430,10 @@
       .menu-logo {
           height: 4.5rem;
       }
+
+      .login-link {
+          display: none;
+      }
     }
     /* Cookie Banner */
     #cookie-banner {
@@ -520,7 +524,7 @@
     </a>
     <div class="nav-items">
         <a href="stack/" class="nav-link">Our Stack</a>
-        <a href="portal/" class="nav-link">Login</a>
+        <a href="portal/" class="nav-link login-link">Login</a>
         <a href="https://calendar.app.google/sLuKPTuHShXvqGiC8" target="_blank" rel="noopener" class="cta-button">Book Now</a>
     </div>
   </nav>
