--- a/stack/index.html
+++ b/stack/index.html
@@ -322,6 +322,10 @@
       .menu-logo {
           height: 4.5rem;
       }
+
+      .login-link {
+          display: none;
+      }
     }
     
     @media (max-width: 600px) {
@@ -417,7 +421,7 @@
         <img src="../img/bnr-1.png" alt="BNR Partners" class="menu-logo">
     </a>
     <div class="nav-items">
-        <a href="../portal/" class="nav-link">Login</a>
+        <a href="../portal/" class="nav-link login-link">Login</a>
         <a href="https://calendar.app.google/sLuKPTuHShXvqGiC8" target="_blank" rel="noopener" class="cta-button">Book Now</a>
     </div>
   </nav>
