--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:url" content="https://bnr.partners/">
   <meta property="og:title" content="BNR Partners | Bridging the Gap in Technical Leadership">
   <meta property="og:description" content="BNR Partners helps companies close the gap in strategic leadership and fill capability gaps. Expert security compliance and technical advisory services.">
-  <meta property="og:image" content="https://bnr.partners/img/bnr-2.png">
+  <meta property="og:image" content="https://bnr.partners/img/bnr-1.png">
   <meta property="og:site_name" content="BNR Partners">
   
   <!-- Twitter -->
@@ -22,11 +22,12 @@
   <meta name="twitter:url" content="https://bnr.partners/">
   <meta name="twitter:title" content="BNR Partners | Bridging the Gap in Technical Leadership">
   <meta name="twitter:description" content="BNR Partners helps companies close the gap in strategic leadership and fill capability gaps. Expert security compliance and technical advisory services.">
-  <meta name="twitter:image" content="https://bnr.partners/img/bnr-2.png">
+  <meta name="twitter:image" content="https://bnr.partners/img/bnr-1.png">
   
   <!-- Additional SEO -->
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://www.google-analytics.com https://www.googletagmanager.com;">
 
   <script type="application/ld+json">
   {
@@ -34,7 +35,7 @@
     "@type": "ProfessionalService",
     "name": "BNR Partners",
     "url": "https://bnr.partners/",
-    "logo": "https://bnr.partners/img/bnr-2.png",
+    "logo": "https://bnr.partners/img/bnr-1.png",
     "description": "BNR Partners helps companies close the gap in strategic leadership and fill capability gaps. Expert security compliance and technical advisory services.",
     "sameAs": [
       "https://github.com/bnr-partners"
