--- a/portal/index.html
+++ b/portal/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self';">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://static.cloudflareinsights.com https://www.google.co.nz; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' https://www.google.co.nz; connect-src 'self' https://cloudflareinsights.com https://www.google.co.nz;">
   <title>BNR Partners | Client Portal</title>
   
   <!-- Open Graph / Facebook -->
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://bnr.partners/portal/">
   <meta property="og:title" content="BNR Partners | Client Portal">
   <meta property="og:description" content="Secure client portal for BNR Partners.">
-  <meta property="og:image" content="https://bnr.partners/img/bnr-1.png">
+  <meta property="og:image" content="https://bnr.partners/img/bnr-2.png">
   <meta property="og:site_name" content="BNR Partners">
 
   <!-- Twitter -->
@@ -20,7 +20,7 @@
   <meta name="twitter:url" content="https://bnr.partners/portal/">
   <meta name="twitter:title" content="BNR Partners | Client Portal">
   <meta name="twitter:description" content="Secure client portal for BNR Partners.">
-  <meta name="twitter:image" content="https://bnr.partners/img/bnr-1.png">
+  <meta name="twitter:image" content="https://bnr.partners/img/bnr-2.png">
 
   <script type="application/ld+json">
   {
@@ -32,7 +32,7 @@
     "publisher": {
       "@type": "Organization",
       "name": "BNR Partners",
-      "logo": "https://bnr.partners/img/bnr-1.png"
+      "logo": "https://bnr.partners/img/bnr-2.png"
     }
   }
   </script>
@@ -189,7 +189,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="../img/bnr-1.png" alt="BNR Partners" class="logo">
+    <img src="../img/bnr-2.png" alt="BNR Partners" class="logo">
     <h1>Client Portal</h1>
     
     <div class="desktop-only desktop-content">
