--- a/portal/index.html
+++ b/portal/index.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://static.cloudflareinsights.com https://www.google.co.nz; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' https://www.google.co.nz; connect-src 'self' https://cloudflareinsights.com https://www.google.co.nz;">
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self' 'unsafe-inline' https://static.cloudflareinsights.com https://www.google.co.nz https://analytics.google.com;
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+    font-src 'self' https://fonts.gstatic.com;
+    img-src 'self' https://www.google.co.nz https://analytics.google.com;
+    connect-src 'self' https://cloudflareinsights.com https://www.google.co.nz https://analytics.google.com;
+  ">
   <title>BNR Partners | Client Portal</title>
   
   <!-- Open Graph / Facebook -->
