--- a/portal/index.html
+++ b/portal/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' 'unsafe-inline' https://static.cloudflareinsights.com https://www.google.co.nz https://analytics.google.com;
+    base-uri 'self';
+    object-src 'none';
+    script-src 'self' https://static.cloudflareinsights.com https://www.google.co.nz https://analytics.google.com;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     font-src 'self' https://fonts.gstatic.com;
     img-src 'self' https://www.google.co.nz https://analytics.google.com;
