--- a/portal/index.html
+++ b/portal/index.html
@@ -5,16 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
   <meta name="referrer" content="strict-origin-when-cross-origin">
-  <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self';
-    base-uri 'self';
-    object-src 'none';
-    script-src 'self' https://static.cloudflareinsights.com https://www.google.co.nz https://analytics.google.com;
-    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-    font-src 'self' https://fonts.gstatic.com;
-    img-src 'self' https://www.google.co.nz https://analytics.google.com;
-    connect-src 'self' https://cloudflareinsights.com https://www.google.co.nz https://analytics.google.com;
-  ">
   <title>BNR Partners | Client Portal</title>
   
   <!-- Open Graph / Facebook -->
@@ -46,156 +36,7 @@
     }
   }
   </script>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-
-    :root {
-      /* Sophisticated, Trustworthy, Warm Palette */
-      --bg: #FAFAF9; /* Warm Gray 50 */
-      --text-main: #44403C; /* Warm Gray 700 */
-      --text-dark: #1C1917; /* Warm Gray 900 */
-      --accent-primary: #0C4A6E; /* Deep Ocean Blue */
-      --accent-highlight: #D97706; /* Muted Amber */
-      --card-bg: #FFFFFF;
-      --border: #E7E5E4;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      min-height: 100vh;
-      background-color: var(--bg);
-      color: var(--text-main);
-      font-family: 'Open Sans', sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 2rem;
-    }
-
-    .card {
-      background: var(--card-bg);
-      padding: 4rem 3rem;
-      border-radius: 16px;
-      border: 1px solid var(--border);
-      box-shadow: 0 20px 40px -12px rgba(0, 0, 0, 0.06);
-      text-align: center;
-      max-width: 500px;
-      width: 100%;
-    }
-
-    .logo {
-      height: 10rem;
-      width: auto;
-      margin-bottom: 2.5rem;
-    }
-
-    .mobile-only {
-      display: none;
-    }
-
-    /* Mobile Message Styling */
-    .mobile-content {
-      /* display: flex;  <-- Removed to prevent overriding display: none */
-      flex-direction: column;
-      align-items: center;
-    }
-    
-    .mobile-icon {
-      width: 3rem;
-      height: 3rem;
-      color: var(--accent-primary);
-      margin-bottom: 1rem;
-      stroke-width: 1.5;
-    }
-
-    .mobile-welcome {
-      font-family: 'Merriweather', serif;
-      font-size: 1.4rem;
-      color: var(--accent-primary);
-      margin-bottom: 1rem;
-      font-style: italic;
-    }
-    
-    .mobile-content p {
-      margin-bottom: 0.5rem;
-    }
-
-    .mobile-hint {
-      font-size: 0.95rem;
-      opacity: 0.85;
-      margin-top: 0.5rem;
-      margin-bottom: 2rem;
-    }
-
-    /* Desktop Message Styling */
-    .desktop-content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .desktop-icon {
-      width: 3rem;
-      height: 3rem;
-      color: var(--accent-primary);
-      margin-bottom: 1rem;
-      stroke-width: 1.5;
-    }
-
-    @media (max-width: 768px) {
-      .desktop-only {
-        display: none;
-      }
-      .mobile-only {
-        display: flex; /* Changed from block to flex to activate flex layout */
-      }
-      .card {
-        padding: 3rem 1.5rem;
-      }
-      .logo {
-        height: 8rem;
-      }
-    }
-
-    h1 {
-      font-family: 'Merriweather', serif;
-      color: var(--accent-primary);
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      line-height: 1.2;
-      font-weight: 700;
-    }
-
-    p {
-      margin-bottom: 2.5rem;
-      font-size: 1.1rem;
-      color: var(--text-main);
-      line-height: 1.6;
-    }
-
-    .cta-button {
-      display: inline-block;
-      background-color: var(--accent-highlight);
-      color: white;
-      padding: 0.75rem 2rem;
-      border-radius: 6px;
-      font-weight: 700;
-      text-decoration: none;
-      transition: background-color 0.2s, transform 0.2s;
-      font-size: 1rem;
-    }
-
-    .cta-button:hover {
-      background-color: #b45309; /* Darker amber */
-      transform: translateY(-2px);
-    }
-  </style>
+  <link rel="stylesheet" href="../css/portal.css">
 </head>
 <body>
   <div class="card">
